Worked on add patient popup

--- a/src/Screens/hospital_Admin/translations/en_json.json
+++ b/src/Screens/hospital_Admin/translations/en_json.json
@@ -358,6 +358,7 @@
 		"cancel": "Cancel",
 		"Doctor": "Doctor",
 		"two_fac_auth_enable":"The 2-factor authentication is activated",
+		"Findaadminstaff":"Find a admin staff...",
 		"Status" :"Status",
 		"more" :"more",
 		"imprint_Email":"Email",
