issues on new work of patient flow

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -141,7 +141,7 @@
 		"find_doc": "اعثر على طبيب",
 		"serch_by_name_id": "بحث بالاسم أو ID",
 		"add_to_trusted_doc": "أضف للأطباء الموثوقين",
-		"recmonded_doc": "أطباء موصى بهم",
+		"recmonded_doc": "اطلب أن تكون طبيبًا موثوقًا",
 		"doc_who_part_of_aimedis": "الأطباء الذين يشكلون جزءاً من منصة إيميديس.",
 		"free_text": "كتابة نص",
 		"forget_password": "نسيت كلمة المرور",
