--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -137,7 +137,7 @@
 		"find_doc": "找医生",
 		"serch_by_name_id": "按名称或ID搜索",
 		"add_to_trusted_doc": "添加到受信任的医生",
-		"recmonded_doc": "推荐医生",
+		"recmonded_doc": "请求成为值得信赖的医生",
 		"doc_who_part_of_aimedis": "属于AIS平台的医生。",
 		"free_text": "自由文本",
 		"forget_password": "忘记密码",
