--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -142,7 +142,7 @@
 		"find_doc": "Finden Sie einen Arzt",
 		"serch_by_name_id": "Nach Name oder ID suchen",
 		"add_to_trusted_doc": "Zu Vertrauensärzten hinzufügen.",
-		"recmonded_doc": "Empfohlene Ärzte",
+		"recmonded_doc": "Antrag auf Anerkennung als Arzt des Vertrauens",
 		"doc_who_part_of_aimedis": "Ärzte, die Mitglieder der AIS Plattform sind.",
 		"free_text": "Freitext",
 		"forget_password": "Passwort vergessen",
