--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -141,7 +141,7 @@
 		"find_doc": "Find a Doctor",
 		"serch_by_name_id": "Search by name or ID",
 		"add_to_trusted_doc": "Add to Trusted Doctors",
-		"recmonded_doc": "Recommended Doctors",
+		"recmonded_doc": "Request to be Trusted Doctor",
 		"doc_who_part_of_aimedis": "Doctors who are part of the AIS platform.",
 		"free_text": "Free Text",
 		"forget_password": "Forget Password",
@@ -1181,7 +1181,7 @@
 		"less_than_err": "Please upload images less than 6",
 		"err_file_formart": "System is not supported this file format",
 		"marital_status": "Marital Status",
-		"select_marital_status": "Selcet Marital Status",
+		"select_marital_status": "Select Marital Status",
 		"respiration": "Respiration",
 		"course_not_updt_cannt_reach_srvr": "Course is not added. Can not reach to server",
 		"CourseAddedMyCourses": "Course added successfully in My courses",
