--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -141,7 +141,7 @@
 		"find_doc": "Trouver un médecin",
 		"serch_by_name_id": "Recherche par nom ou par identifiant",
 		"add_to_trusted_doc": "Ajouter à Médecins de confiance",
-		"recmonded_doc": "Médecins recommandés",
+		"recmonded_doc": "Demander à devenir médecin de confiance",
 		"doc_who_part_of_aimedis": "Les médecins qui font partie de la plate-forme AIS.",
 		"free_text": "Texte libre",
 		"forget_password": "Oublier le mot de passe",
