--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -464,7 +464,7 @@
 		"find_doc": "Vind een Dokter",
 		"serch_by_name_id": "Zoek op naam of ID",
 		"add_to_trusted_doc": "Voeg toe aan Erkende Dokters",
-		"recmonded_doc": "Aanbevolen Dokters",
+		"recmonded_doc": "Verzoek om vertrouwde arts te zijn",
 		"doc_who_part_of_aimedis": "Dokters die onderdeel zijn van het AIS platform.",
 		"free_text": "Vrije Tekst",
 		"format_updated": "Het Format is geüpdatet",
