--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -139,7 +139,7 @@
 		"find_doc": "Encontrar um Médico",
 		"serch_by_name_id": "Pesquisar por nome ou ID",
 		"add_to_trusted_doc": "Adicionar a Médicos Confiáveis",
-		"recmonded_doc": "Médicos Recomendados",
+		"recmonded_doc": "Peça para ser um médico de confiança",
 		"doc_who_part_of_aimedis": "Médicos que fazem parte da plataforma AIS.",
 		"free_text": "Texto Livre",
 		"forget_password": "Esqueceu a senha",
