--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -142,7 +142,7 @@
     "find_doc": "Найти врача",
     "serch_by_name_id": "Поиск по имени или ID",
     "add_to_trusted_doc": "Добавить к избранным врачам",
-    "recmonded_doc": "Рекомендуемые врачи",
+    "recmonded_doc": "Просьба стать доверенным врачом",
     "doc_who_part_of_aimedis": "Врачи, которые работают на платформе AIS.",
     "free_text": "Свободный текст",
     "forget_password": "Забыли пароль",
