--- a/src/translations/sp.json
+++ b/src/translations/sp.json
@@ -140,7 +140,7 @@
 		"find_doc": "Encuentre un médico",
 		"serch_by_name_id": "Buscar por nombre o ID",
 		"add_to_trusted_doc": "Agregar a Médicos de Confianza",
-		"recmonded_doc": "Médicos Recomendados",
+		"recmonded_doc": "Solicitud de ser doctora de confianza",
 		"doc_who_part_of_aimedis": "Médicos que forman parte de la plataforma AIS.",
 		"free_text": "Texto Libre",
 		"plz_enter_valid_email": "Por favor, ingrese un correo electrónico válido",
