--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -136,7 +136,7 @@
 		"find_doc": "Kupata Daktari",
 		"serch_by_name_id": "Kutafuta kwa jina au ID",
 		"add_to_trusted_doc": "Kuongeza kwa Kuaminiwa Madaktari",
-		"recmonded_doc": "Ilipendekeza Madaktari",
+		"recmonded_doc": "Omba kuwa Daktari anayeaminika",
 		"doc_who_part_of_aimedis": "Madaktari ambao ni sehemu ya AIS jukwaa.",
 		"free_text": "Nakala ya bure",
 		"forget_password": "Kusahau Nenosiri",
