--- a/src/translations/tr.json
+++ b/src/translations/tr.json
@@ -141,7 +141,7 @@
 		"find_doc": "Doktor bul",
 		"serch_by_name_id": "Isime veya kimliğe göre ara",
 		"add_to_trusted_doc": "Güvenilir doktorlara ekle",
-		"recmonded_doc": "Tavsiye edilen doktorlar",
+		"recmonded_doc": "Güvenilir Doktor Olma Talebi",
 		"doc_who_part_of_aimedis": "AIS platformun bir parçası olan doktorlar.",
 		"free_text": "Boş yazı",
 		"forget_password": "Şifremi unuttum",
