Worked on filter file and TaskSectionvh

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1599,6 +1599,7 @@
 		"Findaadminstaff":"Find a admin staff",
 		"Patient_does_not_have_email_the_email_created_by_Hospital":"Patient does not have email, the email created by Hospital",
 		"Country_Code":"Country Code",
+		"Admin_staff":"Admin Staff",
 		"EditComment":"Edit Comment",
 		"EnterComment":"Enter Comment",
 		"InstituteGroups": "Hospital Groups",
