update in staff,doctor,nurse

--- a/src/Screens/hospital_Admin/translations/en_json.json
+++ b/src/Screens/hospital_Admin/translations/en_json.json
@@ -222,6 +222,7 @@
 		"next": "Next",
 		"add_new": "Add new",
 		"entry": "entry",
+		"ManageHouse":"Manage Hostipal",          
 		"slct_time_slot": "Select time slot",
 		"my_profile": "My Profile",
 		"find_patient": "Find a patient...",
