Worked on edit task for picture evaluation

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1644,8 +1644,74 @@
 		"renameStep":"Rename step",
 		"Citizenship": "Citizenship",
 		"justapply":"Just apply",
-		"applyFiltersandsave":"Apply and Save"
+		"applyFiltersandsave":"Apply and Save",
 
 			
+		"picture_evaluation": "Picture Evaluation",
+		"diabetes": "Diabetes",
+		"place_of_residence": "Place of Residence",
+		"treatment_so_far": "Treatment so far",
+		"family_history": "Family history",
+		"place_of_birth": "Place of birth",
+		"travel_history_last_month": "Travel history of last six months",
+		"phenotyp_race": "Phenotyp / Race",
+		"medical_preconditions": "Medical preconditions and prediagnosis",
+		"premedication": "Premedication",
+		"image_evaluation": "Image Evaluation",
+		"when_did_it_start": "When did it start ?",
+		"pain_level": "Pain level",
+		"itch": "Itch",
+		"size_progress": "Size progress",
+		"warm": "Warm",
+		"fever_body_temp": "If you have Fever what is your Body Temp? (Temp in degree Fahrenheit)",
+		"sun_before_how_long": "Have you been in the sun before, How long?",
+		"how_cold_long": "Have you been in the Cold (lower then -5C), How long?",
+		"sexual_activities": "Did you had Sexual Activities before ?",
+		"evaluation_request": "Evaluation Request",
+		"added_on": "Added on",
+		"assigned_to": "Assigned to",
+		"hospital": "Hospital",
+		"edit_request": "Edit Request",
+		"edit_feedback": "Edit Feedback",
+		"cancel_request": "Cancel Request",
+		"give_feedback": "Give Feedback",
+		"please_select_gender": "Please select Gender",
+		"valid_age_between": "Please select valid age, Age must be between 0 to 130",
+		"valid_date": "Please select valid start date",
+		"select_hospital": "Please select hospital",
+		"atleast_one_picture": "Please upload atleast one Picture for evaluation",
+		"with_yes_no": "with YES / NO",
+		"please_select": "Please select",
+		"enter_body_temp": "Please Enter body temprature",
+		"valid_body_temp": "Please Enter valid body temprature",
+		"enter_sexual_activities": "Please Enter sexual activities",
+		"Max_word_limit_exceeds": "Max Words limit exceeds in sexual activities",
+		"enter_systolic_value": "Please enter Systolic value",
+		"systolic_bp_in_number": "Systolic bp should be in number",
+		"systolic_value_between": "Please select systolic bp value between 120-140",
+		"enter_diastolic_value": "Please enter Diastolic value",
+		"diastolic_in_number": "Diastolic bp should be in number",
+		"diastolic_value_between": "Please select Diastolic bp value between 80-90",
+		"enter_blood_sugar": "Please enter Blood Sugar",
+		"blood_sugar_in_number": "Blood Sugar should be in number",
+		"sugar_value_between": "Please select Sugar value between 160-240",
+		"enter_hba1c": "Please enter Hba1c",
+		"homoglobin_levels_between": "Hemoglobin A1c levels should be between 57 % and 64 %",
+		"enter_situation": "Please enter Situation",
+		"enter_smoking_status": "Please enter Smoking status",
+		"country_of_residence": "Country of residence",
+		"country_of_birth": "Country of birth",
+		"please_enter": "Please enter",
+		"max_Words_limit_exceeds_in": "Max Words limit exceeds in",
+		"history_month": "History month",
+		"race": "Race",
+		"select_status": "Select Status",
+		"body_temp": "Body temperature",
+		"cold": "Cold",
+		"sun_before": "Sun before",
+		"sexual_active": "Sexual Activities",
+		"payment_done": "Payment done"
+
+
 	}
 }
