new changes for decline request

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1711,6 +1711,6 @@
     "payment_done": "Payment done",
     "assign_to_doctor": "Assign to doctor",
     "edit_picture_evaluation": "Edit Picture Evaluation",
-    "delete_picture_evaluation": "Delete Picture Evaluation"
+    "delete_picture_evaluation": "Decline Picture Evaluation"
   }
 }
