--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1711,27 +1711,27 @@
     "payment_done": "Payment done",
     "assign_to_doctor": "Assign to doctor",
     "edit_picture_evaluation": "Edit Picture Evaluation",
-    "delete_picture_evaluation": "Delete Picture Evaluation",
-   "Global_Role":"Global Role",
-   "Work_Package_can_be":"Work Package can be",
-   "assigned_to_user_and_groups":"assigned to user and groups",
-   "in_possion_role_in":"in possion role in",
-   "reprensentative":"reprensentative",
-   "Copy_Work":"Copy Work",
-   "Select":"Select",
-   "Edit_Project":"Edit Project",
-   "Select_Product_Modules":"Select Product Modules",
-   "Manager_Member":"Manager Member",
-   "View_Work_Package":"View Work Package",
-   "Edit_Work_Package":"Edit Work Package",
-   "Patient_Email":"Patient Email",
-   "Birthday":"Birthday",
-   "Mobile_number":"Mobile number",
-   "Header_inches":"Header(inches)",
-   "Footer_inches":"Footer(inches)",
-   "Free_Content":"Free Content",
-   "NEUROLOGY":"NEUROLOGY"
-  
-  
+    "decline_picture_evaluation": "Decline Picture Evaluation",
+    "Global_Role": "Global Role",
+    "Work_Package_can_be": "Work Package can be",
+    "assigned_to_user_and_groups": "assigned to user and groups",
+    "in_possion_role_in": "in possion role in",
+    "reprensentative": "reprensentative",
+    "Copy_Work": "Copy Work",
+    "Select": "Select",
+    "Edit_Project": "Edit Project",
+    "Select_Product_Modules": "Select Product Modules",
+    "Manager_Member": "Manager Member",
+    "View_Work_Package": "View Work Package",
+    "Edit_Work_Package": "Edit Work Package",
+    "Patient_Email": "Patient Email",
+    "Birthday": "Birthday",
+    "Mobile_number": "Mobile number",
+    "Header_inches": "Header(inches)",
+    "Footer_inches": "Footer(inches)",
+    "Free_Content": "Free Content",
+    "NEUROLOGY": "NEUROLOGY",
+    "Reply": "Reply",
+    "Declined": "Declined"
   }
 }
