Changes in language of hospitaladmin

--- a/src/Screens/hospital_Admin/translations/de.json
+++ b/src/Screens/hospital_Admin/translations/de.json
@@ -630,49 +630,49 @@
 		"more" :"Mehr",
 		"DarkMode": "Dunkler Modus",
 		
-		"AssignHouse": "Assign Hospital",
-		"InstituteGroups": "Hospital Groups",
-		"EditGroup": "Edit Group",
-		"AddInstituteGroup": "+ Add Institute Group",
-		"AddInstitution": "Add Institution",
-		"UploadInstitutionLogo": "Upload Institution Logo",
-		"CurrentLogo": "Current Logo",
-		"UploadHospitalLogo": "Upload Hospital Logo",
-		"DescriptionNote": "Description Note",
-		"EditHospital": "Edit Hospital",
-		"EnterHospitals": "+ Enter Hospitals",
-		"AddHospital": "Add Hospital",
-		"save_and_close": "Save & Close",
-		"Archived": "Archived",
-		"InstitutionName": "Institution Name",
-		"InstitutionDescriptionNote": "Institution Description Note",
-		"HospitalDescriptionNote": "Hospital Description Note",
-		"hosp_name": "Hospital Name",
-		"hosp_id": "Hospital ID",
-		"FilterbyPatient":"Filter by Patient",
-		"Enterinstitutegroupname":"Enter institute group name",
-		"Enterinstitutiondescriptionnote":"Enter institution description note",
-		"Enterhospitalname":"Enter hospital name",
-		"Enterhospitaldescriptionnote":"Enter hospital description note",
-		"Findaadminstaff":"Find a admin staff",
-		"capab_Doctors":"Doctors",
-		"Course_for": "Course is for",
-		"price": "Price",
-		"select_topic": "Select topic",
-		"message": "Message",
-		"capab_Patients" :"Patients",
-		"capab_Hospitals": "Hospitals",
-		"Hospital": "Hospital",
-		"Change_Hospital":"Change Hospital",
-		"HospitalName":"Hospital Name",
-		"Archives":"Archives",
-		"Inst_Name_is_already_exists":"Institution Name is already exist's select another name",
-		"Institution_Name_cant_be_empty":"Institution Name can't be empty",
+		"AssignHouse": "Krankenhaus zuweisen",
+		"InstituteGroups": "Krankenhausgruppen",
+		"EditGroup": "Gruppe bearbeiten",
+		"AddInstituteGroup": "+ Institutsgruppe hinzufügen",
+		"AddInstitution": "Einrichtung hinzufügen",
+		"UploadInstitutionLogo": "Institutionslogo hochladen",
+		"CurrentLogo": "Aktuelles Logo",
+		"UploadHospitalLogo": "Krankenhauslogo hochladen",
+		"DescriptionNote": "Beschreibung Hinweis",
+		"EditHospital": "Krankenhaus bearbeiten",
+		"EnterHospitals": "+ Geben Sie Krankenhäuser ein",
+		"AddHospital": "Krankenhaus hinzufügen",
+		"save_and_close": "Speichern & schließen",
+		"Archived": "Archiviert",
+		"InstitutionName": "Institutionsname",
+		"InstitutionDescriptionNote": "Institution Beschreibung Nichte",
+		"HospitalDescriptionNote": "Hinweis zur Beschreibung des Krankenhauses",
+		"hosp_name": "Name des Krankenhauses",
+		"hosp_id": "Krankenhaus-ID",
+		"FilterbyPatient":"Nach Patient filtern",
+		"Enterinstitutegroupname":"Name der Institutsgruppe eingeben",
+		"Enterinstitutiondescriptionnote":"Geben Sie eine Notiz zur Beschreibung der Institution ein",
+		"Enterhospitalname":"Geben Sie den Krankenhausnamen ein",
+		"Enterhospitaldescriptionnote":"Geben Sie eine Notiz zur Krankenhausbeschreibung ein",
+		"Findaadminstaff":"Finden Sie einen Verwaltungsmitarbeiter",
+		"capab_Doctors":"Ärzte",
+		"Course_for": "Kurs ist für",
+		"price": "Preis",
+		"select_topic": "Thema auswählen",
+		"message": "Nachricht",
+		"capab_Patients" :"Patienten",
+		"capab_Hospitals": "Krankenhäuser",
+		"Hospital": "Krankenhaus",
+		"Change_Hospital":"Krankenhaus wechseln",
+		"HospitalName":"Name des Krankenhauses",
+		"Archives":"Archiv",
+		"Inst_Name_is_already_exists":"Institutionsname ist bereits vorhanden, wählen Sie einen anderen Namen",
+		"Institution_Name_cant_be_empty":"Institutionsname darf nicht leer sein",
 		"Institution_Description_Note_cant_be_empty":"Institution Description Note can't be empty",
-		"Select_atleast_one_hospital":"Select atleast one hospital",
-		"Something_went_wrong":"Somthing went wrong, Please try again",
-		"Hospital_Name_is_already_exist":"Hospital Name is already exist please select another one",
-		"Hospital_Name_cant_be_empty":"Hospital Name can't be empty",
-		"Hospital_Description_Note_cant_be_empty":"Hospital Description Note can't be empty"
+		"Select_atleast_one_hospital":"Wählen Sie mindestens ein Krankenhaus aus",
+		"Something_went_wrong":"Etwas ist schief gelaufen, bitte versuchen Sie es erneut",
+		"Hospital_Name_is_already_exist":"Name des Krankenhauses existiert bereits, bitte wählen Sie einen anderen aus",
+		"Hospital_Name_cant_be_empty":"Krankenhausname darf nicht leer sein",
+		"Hospital_Description_Note_cant_be_empty":"Krankenhaus Beschreibung Hinweis darf nicht leer sein"
 	}
 }
