--- a/src/Screens/hospital_Admin/translations/en_json.json
+++ b/src/Screens/hospital_Admin/translations/en_json.json
@@ -396,7 +396,7 @@
 		"Institution_Name_cant_be_empty":"Institution Name can't be empty",
 		"Institution_Description_Note_cant_be_empty":"Institution Description Note can't be empty",
 		"Select_atleast_one_hospital":"Select atleast one hospital",
-		"Something_went_wrong":"Somthing went wrong, Please try again",
+		"Something_went_wrong":"Something went wrong, Please try again",
 		"Hospital_Name_is_already_exist":"Hospital Name is already exist please select another one",
 		"Hospital_Name_cant_be_empty":"Hospital Name can't be empty",
 		"Hospital_Description_Note_cant_be_empty":"Hospital Description Note can't be empty"
