Worked on all language issues

--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -1347,6 +1347,7 @@
     "add_patient_to_flow": "Patient zum Fluss hinzufügen",
     "add_step": "Schritt hinzufügen",
     "Add": "Hinzufügen",
+    "Add_Appointment": "Termin hinzufügen",
     "AddPatient": "+ Patient hinzufügen",
     "AddStep": "+ Schritt hinzufügen",
     "clear_all_filters": "Alle Filter löschen",
