Worked on all language issues

--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -661,7 +661,26 @@
     "requesteddoctor": "hat darum gebeten, ein vertrauenswürdiger Arzt zu werden",
     "accpetRemove": "Bitte überprüfen Sie dies auf Akzeptieren und Entfernen.",
     "pain": "Schmerzen",
+    "itch": "Jucken",
+    "premedication": "Prämedikation",
+    "travel_history_last_month": "Reiseverlauf der letzten sechs Monate",
     "Mild": "Leicht",
+    "pain_level": "Schmerzniveau",
+    "body_temp": "Körpertemperatur",
+    "cold": "Kalt",
+    "sun_before": "Sonne vorher",
+    "Reply": "Antwort",
+    "image_evaluation": "Bildauswertung",
+    "sexual_active": "Sexuelle Aktivitäten",
+    "payment_done": "Zahlung erledigt",
+    "phenotyp_race": "Phänotyp / Rasse",
+    "family_history": "Familiengeschichte",
+    "diabetes": "Diabetes",
+    "treatment_so_far": "Behandlung bisher",
+    "place_of_residence": "Wohnort",
+    "place_of_birth": "Geburtsort",
+    "medical_preconditions": "Medizinische Voraussetzungen und Vordiagnose",
+    "start_from": "Beginne am",
     "Moderate": "Mäßig",
     "Servere": "Stark",
     "RegisteredSuccessfully": "Erfolgreich registriert",
@@ -1312,6 +1331,9 @@
     "InvoiceID": "Rechnungs-ID",
     "CaseID": "Fall-ID",
     "Status": "Status",
+    "warm": "Warm",
+    "size_progress": "Größenfortschritt",
+    "added_on": "Hinzugefügt zu",
     "BacktoPatientFlow": "Zurück zu Patientenfluss",
     "NewEntry": "Eintrag",
     "NewTask": "Aufgabe",
@@ -1434,6 +1456,7 @@
     "RoomsBeds": "Zimmer & Betten",
     "rooms": "Zimmer",
     "beds": "Betten",
+    "assign_to_doctor": "Arzt zuweisen",
     "StaffActions": "Personalmaßnahmen",
     "thirty4": "34",
     "Diagnoses_made": "gestellte Diagnosen",
@@ -1454,8 +1477,10 @@
     "AddComment": "Kommentar hinzufügen",
     "save_task_and_close": "Aufgabe speichern & schließen",
     "EditTask": "Aufgabe bearbeiten",
+    "decline_picture_evaluation": "Bildauswertung ablehnen",
     "DeleteTask": "Aufgabe löschen",
     "Tasks": "Aufgaben",
+    "view_file": "Datei ansehen",
     "Promotion": "Förderung",
     "AliesID": "Alies ID -",
     "Pin": " Pin -",
@@ -1641,6 +1666,7 @@
     "Task_title_cant_be_empty": "Aufgabentitel kann nicht leer sein",
     "Plz_select_a_Patient": "Bitte wählen Sie einen Patienten",
     "renameStep": "Schritt umbenennen",
+    "Admin_staff": "Verwaltungspersonal",
     "Citizenship": "Staatsangehörigkeit",
     "go_back": "Gehen Sie zurück, um den Qr-Scanner zu verwenden",
     "go_back_to_use_Qr_scanner": "Gehen Sie zurück, um den Qr-Scanner zu verwenden",
