--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1660,6 +1660,7 @@
     "image_evaluation": "Image Evaluation",
     "when_did_it_start": "When did it start ?",
     "pain_level": "Pain level",
+    "start_from": "Start From",
     "itch": "Itch",
     "size_progress": "Size progress",
     "warm": "Warm",
@@ -1712,6 +1713,7 @@
     "sexual_active": "Sexual Activities",
     "payment_done": "Payment done",
     "assign_to_doctor": "Assign to doctor",
+    "view_file": "View File",
     "edit_picture_evaluation": "Edit Picture Evaluation",
     "decline_picture_evaluation": "Decline Picture Evaluation",
     "Global_Role": "Global Role",
