worked on sickleave Certificate from patient

--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -1683,6 +1683,6 @@
     "Patient_not_found_information":"Der Patient wird anhand der angegebenen Informationen nicht gefunden",
     "Please_upload_document_approval_from_patient":"Bitte laden Sie das Genehmigungsdokument des Patienten hoch",
     "Please_select_Step_name":"Bitte wählen Sie den Schrittnamen aus",
-    "":""
+    "please_upload_documents":"bitte laden sie dokumente hoch"
   }
 }
