--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1751,7 +1751,39 @@
     "Please_enter_information_of_patient":"Please enter the full information of patient",
     "Patient_not_found_information":"Patient is not found on the basis of given information",
     "Please_upload_document_approval_from_patient":"Please upload the document of approval from patient",
-    "Please_select_Step_name":"Please select Step name"
+    "Please_select_Step_name":"Please select Step name",
+    "please_upload_documents":"please upload documents",
+    "view_detail":"View Detail",
+    "approved":"Approve",
+    "headache":"headache",
+    "headache_body_temp":"Body Temperature",
+    "headache_need_to_vomit":"Headache need to vomit",
+    "headache_onset_of_pain":"Headache onset of pain",
+    "pain_levelsss":"pain levels",
+    "quality_of_pain":"Quality Pain",
+    "feel_depressed":"feel depressed",
+    "fever_cough":"fever cough",
+    "fever_cold":"fever cold",
+    "fever_hoarseness":"fever hoarseness",
+    "fever_low_body_temp":"fever temperature",
+    "fever":"fever",
+    "fever_pain_intensity":"fever pain intensity",
+    "fever_sputum":"fever sputum",
+    "fever_symptoms_begin":"fever symptoms begin",
+    "fever_top_body_temp":"fever top body temp",
+    "headache_hurtnow_back":"headache hurt back",
+    "headache_hurtnow_front":"headache hurt front",
+    "headache_hurtnow_left":"headache hurt left",
+    "headache_hurtnow_right":"headache hurt right",
+    "headache_hurtnow_top":"headache hurt top",
+    "headache_painbegin_back":"headache pain back",
+    "headache_painbegin_front":"headache pain front",
+    "headache_painbegin_left":"headache pain left",
+    "headache_painbegin_right":"headache pain right",
+    "headache_painbegin_top":"headache pain top",
+    "headache_take_painkillers":"painkillers",
+    "headache_undergoing_treatment":"headache treatment"
+  
    
   }
 }
