worked on painpoint

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1761,7 +1761,7 @@
     "headache_onset_of_pain":"Headache onset of pain",
     "pain_levelsss":"pain intensity",
     "quality_of_pain":"Quality Pain",
-    "feel_depressed":"feel Depressed",
+    "feel_depressed":"Depressed",
     "cough":"fever cough",
     "fever_cold":"fever cold",
     "fever_hoarseness":"fever hoarseness",
@@ -1785,7 +1785,7 @@
     "headache_painbegin_top":"Top",
     "headache_take_painkillers":"painkillers",
     "headache_undergoing_treatment":"headache treatment",
-    "Stomach":"Stomach",
+    "Stomach_Problems":"Stomach Pain",
     "stomach_sternum":"stomach sternum",
     "stomach_temp":"stomach temp",
     "stomach_periodically":"stomach periodically",
@@ -1794,7 +1794,6 @@
     "stomach_failure":"stomach failure",
     "stomach_undergoing_treatment":"stomach treatment",
     "stomach_take_painkillers":"stomach painkillers",
-    "stomach_problems":"stomach problems",
    "stomach_intensity":"stomach intensity",
    "back_pain":"Back pain",
    "back_injured":"back injured",
