Work on pop up on mobile change and also checkbox of newsletter

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -1259,6 +1259,14 @@
 		"select_user_type":"الرجاء تحديد نوع المستخدم",
 		"suported_file_type_jpg": "أنواع الملفات المدعومة: .jpg و .png و",
 		"plz_select_patient":"من فضلك ، حدد باتينيت",
+		"followed": "يتبع",
+		"unfollowed": "غير متابع",
+		"aimedis_newsletter": "النشرة الإخبارية Aimedis",
+		"follow": "إتبع",
+		"unfollow": "الغاء المتابعة",
+		"since": "حيث",
+		"not_followed_by_yet": "لم يتبعه بعد",
+		"change_citizenship": "هل تريد تغيير دولة الجنسية لتتطابق مع رمز بلدك المحمول الجديد؟",
 
 		"Billing": "Billing",
 		"Institution": "Institution",
