--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -1260,6 +1260,14 @@
 		"select_user_type": "请选择用户类型",
 		"suported_file_type_jpg": "支持的文件类型：。jpg，。png",
 		"plz_select_patient":"請選擇一個patinet",
+		"followed": "跟随",
+		"unfollowed": "未关注",
+		"aimedis_newsletter": "艾米迪斯通讯",
+		"follow": "跟随",
+		"unfollow": "取消关注",
+		"since": "自从",
+		"not_followed_by_yet": "还没跟上",
+		"change_citizenship": "您想根据您的新手机号码更改 国籍吗？",
 
 		"Billing": "Billing",
 		"Institution": "Institution",
