--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -1279,6 +1279,14 @@
     "select_user_type": "Bitte wählen Sie den Benutzertyp",
     "suported_file_type_jpg": "Unterstützte Dateitypen: .jpg, .png",
     "plz_select_patient": "Bitte wählen Sie ein Lack aus",
+    "followed": "gefolgt",
+		"unfollowed": "unbefolgt",
+		"aimedis_newsletter": "Aimedis newsletter",
+		"follow": "Folgen",
+		"unfollow": "entfolgen",
+		"since": "seit",
+		"not_followed_by_yet": "noch nicht gefolgt",
+		"change_citizenship": "Möchten Sie das Land der Staatsbürgerschaft gemäß Ihrem neuen mobilen Ländercode ändern?",
 
     "Billing": "Abrechnung",
     "Institution": "Einrichtung",
