--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1259,6 +1259,16 @@
     "select_user_type": "Please select user type",
     "suported_file_type_jpg": "Supported file types: .jpg, .png",
     "plz_select_patient": "Please, Select a patient",
+    "justapply": "Just apply",
+    "applyFiltersandsave": "Apply and Save",
+    "followed": "followed",
+    "unfollowed": "unfollowed",
+    "aimedis_newsletter": "Aimedis newsletter",
+    "follow": "Follow",
+    "unfollow": "Unfollow",
+    "since": "since",
+    "not_followed_by_yet": "not followed by yet",
+    "change_citizenship": "Do you want to change the Citizenship country according your new mobile country code?",
 
     "Billing": "Billing",
     "Institution": "Institution",
@@ -1644,8 +1654,6 @@
     "Plz_select_a_Patient": "Please select a Patient",
     "renameStep": "Rename step",
     "Citizenship": "Citizenship",
-    "justapply": "Just apply",
-    "applyFiltersandsave": "Apply and Save",
 
     "picture_evaluation": "Picture Evaluation",
     "diabetes": "Diabetes",
