--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -1259,6 +1259,14 @@
 		"select_user_type": "Selecteer a.u.b. gebruikerstype",
 		"suported_file_type_jpg": "Ondersteunde bestandssoorten: .jpg, .png",
 		"plz_select_patient":"Selecteer a.u.b. een patet",
+		"followed": "gevolgd",
+		"unfollowed": "niet meer gevolgd",
+		"aimedis_newsletter": "Aimedis nieuwsbrief",
+		"follow": "volgen",
+		"unfollow": "niet meer volgen",
+		"since": "sinds",
+		"not_followed_by_yet": "nog niet gevolgd door",
+		"change_citizenship": "Wilt u het staatsburgerschapsland wijzigen volgens uw nieuwe mobiele nummer?",
 
 		"Billing": "Billing",
 		"Institution": "Institution",
