--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -1260,6 +1260,14 @@
 		"select_user_type":"Selecione o tipo de usuário",
 		"suported_file_type_jpg": "Tipos de arquivos permitidos: .jpg, .png",
 		"plz_select_patient":"Por favor, selecione um patinet",
+		"followed": "seguido",
+		"unfollowed": "não seguido",
+		"aimedis_newsletter": "Boletim Aimedis",
+		"follow": "Segue",
+		"unfollow": "deixar de seguir",
+		"since": "Desde a",
+		"not_followed_by_yet": "ainda não seguiu",
+		"change_citizenship": "Deseja alterar o país de cidadania de acordo com seu novo número de celular?",
 
 		"Billing": "Billing",
 		"Institution": "Institution",
