--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -1260,6 +1260,14 @@
     "select_user_type": "Пожалуйста, выберите тип пользователя",
     "suported_file_type_jpg": "Поддерживаемые типы файлов: .JPG, .PNG",
 		"plz_select_patient":"Пожалуйста, выберите патинет",
+    "followed": "последовал",
+		"unfollowed": "отписался",
+		"aimedis_newsletter": "Информационный бюллетень Аймедис",
+		"follow": "следить",
+		"unfollow": "отписаться",
+		"since": "поскольку",
+		"not_followed_by_yet": "еще не последовало",
+		"change_citizenship": "Вы хотите изменить страну гражданства в соответствии с вашим новым номером мобильного телефона?",
 
     "Billing": "Billing",
 		"Institution": "Institution",
