--- a/src/translations/sp.json
+++ b/src/translations/sp.json
@@ -1259,6 +1259,14 @@
 		"select_user_type": "Seleccione el tipo de usuario",
 		"suported_file_type_jpg": "Tipos de archivos admitidos: .jpg, .png",
 		"plz_select_patient":"Por favor, seleccione un patinet",
+		"followed": "seguido",
+		"unfollowed": "no seguido",
+		"aimedis_newsletter": "Boletín informativo de Aimedis",
+		"follow": "seguir",
+		"unfollow": "dejar de seguir",
+		"since": "ya que",
+		"not_followed_by_yet": "no seguido por todavía",
+		"change_citizenship": "¿Quieres cambiar el país de ciudadanía según tu nuevo número de móvil?",
 
 		"Billing": "Billing",
 		"Institution": "Institution",
