--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -1258,6 +1258,14 @@
 		"select_user_type":"Tafadhali chagua aina ya mtumiaji",
 		"suported_file_type_jpg": "Mkono faili aina: .jpg, .png",
 		"plz_select_patient":"Tafadhali, Chagua patinet",
+		"followed": "ikifuatiwa",
+		"unfollowed": "umeacha kufuata",
+		"aimedis_newsletter": "Jarida la Aimedis",
+		"follow": "kufuata",
+		"unfollow": "acha kufuata",
+		"since": "tangu",
+		"not_followed_by_yet": "haijafuatwa bado",
+		"change_citizenship": "Je, ungependa kubadilisha Uraia kulingana na nambari yako mpya ya simu ya mkononi?",
 
 		"Billing": "Billing",
 		"Institution": "Institution",
