worked on sick certificate

--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -1709,7 +1709,8 @@
     "Sent_Special_Doctor":"An einen Spezialarzt geschickt",
     "Assigned_doctor":"Dem Durchgangsarzt zugewiesen",
     "Imposible_since":"arbeitSunfanhig Seit",
-    "most_until":"Voraussichtlich arbeitsunfähig bis einschließlich",
+    "most_until":"Voraussichtlich arbeitsunfähig bis ",
+    "work_until":" einschließlich",
     "detected_at":"fesllgestellt am",
     "Stamp_Doctor":"Vertragsarzlistempel / Unterschritt des Arztes",
     "disability":"Arbeitsunfahigkeits-",
