--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1848,7 +1848,8 @@
   "Sent_Special_Doctor":"Sent to a Special Doctor",
   "Assigned_doctor":"Assigned to the accident insurance doctor",
   "Imposible_since":"Imposible to work since",
-  "most_until":"Most likely imposible to work until",
+  "most_until":"Most likely imposible to ",
+  "work_until":"work until",
   "detected_at":"Detected at",
   "Stamp_Doctor":"Stamp and Signature of the Doctor",
   "disability":"Disability - ",
