worked on certificate

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1853,7 +1853,9 @@
   "detected_at":"Detected at",
   "Stamp_Doctor":"Stamp and Signature of the Doctor",
   "disability":"Disability - ",
-  "certification":"certification"
+  "certification":"certification",
+  "create":"Create"
+  
   
   
    
